--- a/resources/scss/_vars.scss
+++ b/resources/scss/_vars.scss
@@ -3,3 +3,18 @@ $color-2: #DBCD7F;
 $color-3: #675EDB;
 $color-4: #67DB53;
 $color-5: #DB74BD;
+$filter-error: yellow;
+
+$color-1-dark: rgb(29, 29, 29);
+$color-2-dark: #158A5C;
+$color-3-dark: #8A3A29;
+$color-4-dark: #8A650E;
+$color-5-dark: #22428A;
+$filter-error-dark: orange;
+
+$button-height: 30px;
+$button-width: 210px;
+$button-distance: 15px;
+$border-width: 2px;
+
+$timing: 0.2s !default;
