--- a/views/fragments/head.ejs
+++ b/views/fragments/head.ejs
@@ -2,11 +2,11 @@
 <meta name="author" content="Florian Luca-Paul">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="apple-touch-icon" sizes="180x180" href="resources/ico/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="resources/ico/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="resources/ico/favicon-16x16.png">
-<link rel="manifest" href="resources/ico/site.webmanifest">
-<link rel="mask-icon" href="resources/ico/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="apple-touch-icon" sizes="180x180" href="/resources/ico/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/resources/ico/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/resources/ico/favicon-16x16.png">
+<link rel="manifest" href="/resources/ico/site.webmanifest">
+<link rel="mask-icon" href="/resources/ico/safari-pinned-tab.svg" color="#5bbad5">
 <link rel="shortcut icon" href="resources/ico/favicon.ico">
 <meta name="apple-mobile-web-app-title" content="AllMuzica">
 <meta name="application-name" content="AllMuzica">
@@ -19,13 +19,16 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@500&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/e0670bda4c.js" crossorigin="anonymous"></script>
 
-<link rel="stylesheet" href="resources/css/layout.css" type="text/css">
-<link rel="stylesheet" href="resources/css/nav.css" type="text/css">
-<link rel="stylesheet" href="resources/css/nav-1300.css" type="text/css" media="screen and (max-width:1300px)">
-<link rel="stylesheet" href="resources/css/nav-700.css" type="text/css" media="screen and (max-width:700px)">
-<link rel="stylesheet" href="resources/css/link-top.css" type="text/css">
-<link rel="stylesheet" href="resources/css/tabel_oferte.css" type="text/css">
-<link rel="stylesheet" href="resources/css/other.css" type="text/css">
-<link rel="stylesheet" href="resources/css/print.css" type="text/css">
-<link rel="stylesheet" href="resources/css/galery.css" type="text/css">
-<link rel="stylesheet" href="resources/css/css-effects.css" type="text/css">
+<link rel="stylesheet" href="/resources/css/layout.css" type="text/css">
+<link rel="stylesheet" href="/resources/css/nav.css" type="text/css">
+<link rel="stylesheet" href="/resources/css/nav-1300.css" type="text/css" media="screen and (max-width:1300px)">
+<link rel="stylesheet" href="/resources/css/nav-700.css" type="text/css" media="screen and (max-width:700px)">
+<link rel="stylesheet" href="/resources/css/link-top.css" type="text/css">
+<link rel="stylesheet" href="/resources/css/tabel_oferte.css" type="text/css">
+<link rel="stylesheet" href="/resources/css/other.css" type="text/css">
+<link rel="stylesheet" href="/resources/css/print.css" type="text/css">
+<link rel="stylesheet" href="/resources/css/galery.css" type="text/css">
+<link rel="stylesheet" href="/resources/css/css-effects.css" type="text/css">
+<link rel="stylesheet" href="/resources/css/products.css" type="text/css">
+
+<script src="/resources/js/theme.js"></script>
