--- a/resources/scss/custom-bootstrap.scss
+++ b/resources/scss/custom-bootstrap.scss
@@ -33,3 +33,13 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 address {
     margin: 0;
 }
+
+label {
+    display: none;
+}
+
+@media screen and (max-width:700px) {
+    label {
+        display: block;
+    }
+}
