--- a/resources/scss/layout.scss
+++ b/resources/scss/layout.scss
@@ -1,14 +1,9 @@
 @import "_vars.scss";
+@import "themes.scss";
 
 html {
     font-family: 'Noto Sans', sans-serif;
     font-size: 18px;
-
-    a {
-        &:hover {
-            color: $color-3;
-        }
-    }
 }
 
 body {
@@ -18,6 +13,10 @@ body {
 
     a {
         color: $color-4;
+
+        &:hover {
+            color: $color-3;
+        }
     }
 
     p, td, th, figcaption, address, i, s, em, strong, h1, h2, h3, h4, h5{
