--- a/resources/scss/custom-bootstrap.scss
+++ b/resources/scss/custom-bootstrap.scss
@@ -29,6 +29,14 @@ nav * {
    box-sizing: initial;
 }
 
+*, *::before, *::after {
+    box-sizing: unset;
+}
+
+.accordion-button {
+    box-sizing: border-box;
+}
+
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
     &:not(.accordion-header) {
         margin-top: .67em;
