--- a/views/fragments/head.ejs
+++ b/views/fragments/head.ejs
@@ -31,11 +31,12 @@
 <link rel="stylesheet" href="/resources/css/print.css" type="text/css">
 <link rel="stylesheet" href="/resources/css/galery.css" type="text/css">
 <link rel="stylesheet" href="/resources/css/css-effects.css" type="text/css">
+<link rel="stylesheet" href="/resources/css/product.css" type="text/css">
 <link rel="stylesheet" href="/resources/css/products.css" type="text/css">
 <link rel="stylesheet" href="/resources/css/theme-picker.css" type="text/css">
 <link rel="stylesheet" href="/resources/css/banner.css" type="text/css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 
-<script src="node_modules\bootstrap\dist\js\bootstrap.bundle.js"></script>
+<script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 <script src="/resources/js/theme.js"></script>
 <script src="/resources/js/menu.js"></script>
